# scaling-vin-pytorch

./: README.md  pyproject.toml
.github/workflows/: test.yml
scaling_vin_pytorch/: __init__.py  vin.py  vin_3d.py
tests/: test_vin.py
