[project]
name = "scaling-vin-pytorch"
version = "0.0.1"
description = "Scaling Value Iteration Networks"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'planning',
    'value iteration network'
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    "einops>=0.8.0",
    "einx>=0.3.0",
    "torch>=2.0",
    "x-transformers>=1.35.3"
]

[project.urls]
Homepage = "https://pypi.org/project/scaling-vin-pytorch/"
Repository = "https://github.com/lucidrains/scaling-vin-pytorch"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["scaling_vin_pytorch"]
